<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">scraptBook</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="wondersofworld">wonders of world</string>
    <string name="tajmahal">tajmahal</string>
    <string name="eiffel_tower">Eiffel Tower</string>
    <string name="china_wall">China Wall</string>
    <string name="pyramid">Pyramid</string>
    
</resources>
